--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     // Picasso
     implementation "com.squareup.picasso:picasso:2.8"
 
-    // ViewModel + Coroutin
+    // ViewModel + Coroutine
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     // Epoxy
