--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,24 +5,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".SimpleMortyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMorty">
-        <activity
-            android:name=".ui.DetailCharactersActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.CharacterListActivity"
-            android:exported="true">
+        <activity android:name=".NavGraphActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
